// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders default input 1`] = `
<div
  class="text--input-top text--input-regular sc-bdVaJa cBKMGA"
>
  <label
    class="sc-bwzfXH yJMup"
    id="test1firstname__label"
  >
    First Name
  </label>
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      aria-labelledby="test1firstname__label"
      class="sc-bxivhb jZNkaQ"
      id="test1firstname__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX dfGglR"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders disabled input 1`] = `
<div
  class="text--input-top text--input-disabled text--input-regular sc-bdVaJa cBKMGA"
>
  <label
    class="sc-bwzfXH yJMup"
    id="test1firstname__label"
  >
    First Name
  </label>
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      aria-labelledby="test1firstname__label"
      class="sc-bxivhb jZNkaQ"
      disabled=""
      id="test1firstname__input"
      name="test1"
      placeholder=""
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX dfGglR"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders input with error 1`] = `
<div
  class="text--input-top text__error text--input-regular sc-bdVaJa cBKMGA"
>
  <label
    class="sc-bwzfXH yJMup"
    id="test1firstname__label"
  >
    First Name
  </label>
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      aria-labelledby="test1firstname__label"
      class="sc-bxivhb jZNkaQ"
      id="test1firstname__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="true"
      class="sc-ifAKCX dfGglR"
      role="alert"
    >
      Something Went Wrong
    </label>
  </div>
</div>
`;

exports[`Input renders large input 1`] = `
<div
  class="text--input-top text--input-large sc-bdVaJa cBKMGA"
>
  <label
    class="sc-bwzfXH yJMup"
    id="test1firstname__label"
  >
    First Name
  </label>
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      aria-labelledby="test1firstname__label"
      class="sc-bxivhb jZNkaQ"
      id="test1firstname__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX dfGglR"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders left labeled input 1`] = `
<div
  class="text--input-left text--input-regular sc-bdVaJa cBKMGA"
>
  <label
    class="sc-bwzfXH yJMup"
    id="test1firstname__label"
  >
    First Name
  </label>
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      aria-labelledby="test1firstname__label"
      class="sc-bxivhb jZNkaQ"
      id="test1firstname__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX dfGglR"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders small input 1`] = `
<div
  class="text--input-top text--input-small sc-bdVaJa cBKMGA"
>
  <label
    class="sc-bwzfXH yJMup"
    id="test1firstname__label"
  >
    First Name
  </label>
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      aria-labelledby="test1firstname__label"
      class="sc-bxivhb jZNkaQ"
      id="test1firstname__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX dfGglR"
      role="alert"
    />
  </div>
</div>
`;

exports[`Input renders top labeled input 1`] = `
<div
  class="text--input-top text--input-regular sc-bdVaJa cBKMGA"
>
  <label
    class="sc-bwzfXH yJMup"
    id="test1firstname__label"
  >
    First Name
  </label>
  <div
    class="sc-htpNat eXpulu"
  >
    <input
      aria-labelledby="test1firstname__label"
      class="sc-bxivhb jZNkaQ"
      id="test1firstname__input"
      name="test1"
      placeholder="test hint"
      type="text"
    />
    <label
      aria-invalid="false"
      class="sc-ifAKCX dfGglR"
      role="alert"
    />
  </div>
</div>
`;
